refactor: 카테고리/감정/상황 정렬 기준 업데이트 및 리포트 코멘트 문구 정책 반영